@@ -4,6 +4,7 @@ import com.example.sahibinden.model.Ozellik;
 import com.example.sahibinden.model.dto.OzellikRequest;
 import com.example.sahibinden.model.dto.OzellikResponse;
 import com.example.sahibinden.service.OzellikService;
+import com.example.sahibinden.utils.TestUtils;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
@@ -12,7 +13,6 @@ import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -30,21 +30,21 @@ public class OzellikControllerTest {
 
     @Test
     void getOzellikById() {
-        Long ozellikId = 1L;
-        Ozellik mockOzellik = new Ozellik();
-        when(ozellikService.getOzellikById(ozellikId)).thenReturn(mockOzellik);
 
-        ResponseEntity<OzellikResponse> responseEntity = ozellikController.getOzellikById(ozellikId);
+        Ozellik mockOzellik = TestUtils.ozellikBuilder();
+        when(ozellikService.getOzellikById(mockOzellik.getId())).thenReturn(mockOzellik);
+
+        ResponseEntity<OzellikResponse> responseEntity = ozellikController.getOzellikById(mockOzellik.getId());
 
         assertEquals(HttpStatus.OK, responseEntity.getStatusCode());
         assertNotNull(responseEntity.getBody());
 
-        verify(ozellikService, times(1)).getOzellikById(ozellikId);
+        verify(ozellikService, times(1)).getOzellikById(mockOzellik.getId());
     }
 
     @Test
     void getAllOzellikler() {
-        List<Ozellik> mockOzellikler = Arrays.asList(new Ozellik(), new Ozellik());
+        List<Ozellik> mockOzellikler = List.of(TestUtils.ozellikBuilder(), TestUtils.ozellikBuilder());
         when(ozellikService.getAllOzellik()).thenReturn(mockOzellikler);
 
         ResponseEntity<List<OzellikResponse>> responseEntity = ozellikController.getAllOzellikler();
@@ -59,7 +59,7 @@ public class OzellikControllerTest {
     @Test
     void addOzellik() {
         OzellikRequest mockOzellikRequest = new OzellikRequest();
-        Ozellik mockAddedOzellik = new Ozellik();
+        Ozellik mockAddedOzellik = TestUtils.ozellikBuilder();
         when(ozellikService.addOzellik(any(Ozellik.class))).thenReturn(mockAddedOzellik);
 
         ResponseEntity<OzellikResponse> responseEntity = ozellikController.addOzellik(mockOzellikRequest);
@@ -72,12 +72,12 @@ public class OzellikControllerTest {
 
     @Test
     void updateOzellik() {
-        Long ozellikId = 1L;
+
         OzellikRequest mockOzellikRequest = new OzellikRequest();
-        Ozellik mockUpdatedOzellik = new Ozellik();
+        Ozellik mockUpdatedOzellik = TestUtils.ozellikBuilder();
         when(ozellikService.updateOzellik(any(Ozellik.class))).thenReturn(mockUpdatedOzellik);
 
-        ResponseEntity<OzellikResponse> responseEntity = ozellikController.updateOzellik(ozellikId, mockOzellikRequest);
+        ResponseEntity<OzellikResponse> responseEntity = ozellikController.updateOzellik(mockUpdatedOzellik.getId(), mockOzellikRequest);
 
         assertEquals(HttpStatus.OK, responseEntity.getStatusCode());
         assertNotNull(responseEntity.getBody());
